fix z-index fejl for header og footer

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
   position: fixed;
   top: 0;
   background-color: #394867;
-  z-index: 3;
+  z-index: 4;
 }
 
 main {
@@ -89,13 +89,14 @@ nav {
   top: -61px;
   display: flex;
   border-radius: 5px;
+  z-index: 3;
 }
 
 #menu ul {
   margin-top: 200px;
   width: 150px;
   padding-left: 18px;
-  z-index: 3;
+
   text-decoration: none;
   list-style-type: none;
   font-size: 15px;
@@ -193,6 +194,6 @@ footer {
   width: 100vw;
   bottom: 0;
   font-size: 17px;
-  z-index: 3;
+  z-index: 1;
   position: relative;
 }
